# ClusterChatServer

./: CMakeLists.txt  README.md  chat.sql  dbConf.json  dbconf.json  main.cpp
include/: chatServer.hpp  chatService.hpp  public.h  public.hpp
include/CmfNet/base/: CurrentThread.hpp  Log.hpp  StringArg.hpp  Thread.hpp  Timestamp.hpp  copyable.hpp  noncopyable.hpp
include/CmfNet/net/: Acceptor.hpp  Buffer.hpp  Callbacks.hpp  Channel.hpp  EPollPoller.hpp  EventLoop.hpp  EventLoopThread.hpp  EventLoopThreadPool.hpp  InetAddress.hpp  Poller.hpp  Socket.hpp  SocketOps.hpp  TcpConnection.hpp  TcpServer.hpp
include/cm/base/: Copyable.hpp  CurrentThread.hpp  Log.hpp  NonCopyable.hpp  Thread.hpp  Timestamp.hpp
include/cm/net/: Acceptor.hpp  Buffer.hpp  Callbacks.hpp  Channel.hpp  EPollPoller.hpp  EventLoop.hpp  EventLoopThread.hpp  EventLoopThreadPool.hpp  InetAddress.hpp  Poller.hpp  Socket.hpp  SocketOps.hpp  TcpConnection.hpp  TcpServer.hpp
include/db/: connection.hpp  connectionManage.hpp  dbConf.hpp
include/model/: user.hpp
include/server/: chatserver.h  chatservice.h
include/server/db/: Connection.h  ConnectionPool.h  db.h  redis.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h  usermodel.h
lib/cm/: libcm.so.1.1
lib/mariadb/: libmariadb.so.3
src/: chatServer.cpp  chatService.cpp  main.cpp
src/client/: CMakeLists.txt  client.cpp
src/db/: connection .cpp  connectionManage.cpp
src/model/: user.cpp
src/server/: chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: Connection.cpp  ConnectionPool.cpp  db.cpp  redis.cpp
src/server/model/: friendmodel.cpp  group.cpp  groupmodel.cpp  groupuser.cpp  offlinemessagemodel.cpp  user.cpp  usermodel.cpp
test/: jsonTest.cpp  netTest.cpp  sqlTest.cpp
test/test_json/: test_json.cpp
test/test_muduo/: CMakeLists.txt  test_muduo.cpp
